It seems that on double click the KFileWidget emits accepted twice.

This should likely be fixed in the KFileWidget class itself, but this
fix is needed anyway since the user can double click on the open
button too, which we would get a crash over then.
BUG:202078

svn path=/trunk/koffice/; revision=1007452