libs/widgets/openpane/KoExistingDocumentPane.h
@@ -41,6 +41,7 @@ signals:
 private:
     KFileWidget* m_fileWidget;
     KPushButton* m_openButton;
+    bool seen;
 };
 
 #endif //KOEXISTINGDOCUMENTPANE_H
